@@ -1,7 +1,11 @@
 ikiwiki (3.20120629.1) UNRELEASED; urgency=medium
 
+  [ Joey Hess ]
   * Set Debian package maintainer to Simon McVittie as I'm retiring from
     Debian.
+
+  [ Amitai Schlair ]
+  * blogspam: use the 2.0 JSON API (the 1.0 XML-RPC API has been EOL'd).
 
  -- Joey Hess <joeyh@debian.org>  Mon, 20 Oct 2014 12:04:49 -0400
 
